force-app/main/default/objects/Charge__c/fields/Card_Holder__c.field-meta.xml
<CustomField>
    <fullName>Card_Holder__c</fullName>
    <formula>Expense_Report__r.Card__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card Holder</label>
    <type>Text</type>
</CustomField>