force-app/main/default/objects/Charge__c/fields/Expense_Report__c.field-meta.xml
<CustomField>
    <fullName>Expense_Report__c</fullName>
    <label>Expense Report</label>
    <referenceTo>Expense_Report__c</referenceTo>
    <relationshipLabel>Charges</relationshipLabel>
    <relationshipName>Charges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>