force-app/main/default/objects/Charge__c/fields/Needs_Receipt_Count__c.field-meta.xml
<CustomField>
    <fullName>Needs_Receipt_Count__c</fullName>
    <formula
  >IF(Amount__c  &gt;= 75.00 &amp;&amp;  Receipt_Attached__c = FALSE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs Receipt Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>