force-app/main/default/objects/Charge__c/fields/Receipt_Attached__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipt Attached</label>
    <type>Checkbox</type>
</CustomField>