force-app/main/default/objects/Charge__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEEDS CATEGORY</fullName>
                <default>true</default>
                <label>NEEDS CATEGORY</label>
            </value>
            <value>
                <fullName>NEEDS RECEIPT</fullName>
            </value>
            <value>
                <fullName>NEEDS CATEGORY &amp; RECEIPT</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>