force-app/main/default/objects/Charge__c/listViews/Charges_for_In_Progress_Expense_Report.listView-meta.xml
<ListView>
    <fullName>Charges_for_In_Progress_Expense_Report</fullName>
    <columns>Card_Holder__c</columns>
    <columns>Date__c</columns>
    <columns>NAME</columns>
    <columns>Merchant__c</columns>
    <columns>Category__c</columns>
    <columns>Receipt_Attached__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>OK</value>
    </filters>
    <filters>
        <field>Card_Holder__c</field>
        <operation>contains</operation>
        <value>Harney,Paul</value>
    </filters>
    <label>Charges to Process - Paul Harney</label>
</ListView>